# KnowledgeAI

./: .gitignore  README.md  docker-compose.yaml  package-lock.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 2644f69a45f9_add_conversations_and_messages_tables.py  299d4ac4134c_add_documents_table.py  7682ddaf74bc_add_chunks_table.py  a3c06c0837d9_initial_empty_migration.py  b6be6237c10f_add_embedding_column_to_chunks.py  b91038076dab_add_user_and_organization_tables.py
backend/app/: main.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/routes/: auth.py  chat.py  conversations.py  documents.py  health.py  search.py
backend/app/core/: chunker.py  config.py  database.py  embedder.py  extractor.py  logging.py  security.py  storage.py
backend/app/models/: __init__.py  chunk.py  conversation.py  document.py  message.py  organization.py  user.py
backend/app/schemas/: auth.py  chat.py  conversation.py  document.py
backend/app/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_documents.py
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  Layout.module.css
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: Chat.jsx  Chat.module.css  Dashboard.jsx  Dashboard.module.css  Documents.jsx  Documents.module.css  Login.jsx  Login.module.css
