[project]
name = "knowledge-base-ai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.5",
    "psycopg2-binary>=2.9.12",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "pydantic[email]>=2.13.4",
    "bcrypt==4.0.1",
]
